feat: add secure sensitive data manager CLI project

--- a/index.html
+++ b/index.html
@@ -262,47 +262,46 @@
                         </div>
                     </div>
 
-                    <!-- Proyecto 2 -->
-                    <!-- <div class="project-card glass" data-aos="fade-up" data-aos-delay="100">
+                    <!-- Proyecto 6 -->
+                    <div class="project-card glass" data-aos="fade-up" data-aos-delay="100">
+                        <!-- Proyecto: Gestor Seguro de Información Sensible (CLI) -->
                         <div class="project-img">
-                            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80"
-                                alt="Proyecto 2">
+                            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800&q=80"
+                                alt="Gestor Seguro CLI">
                         </div>
+
                         <div class="project-info">
-                            <h3>Analisis de datos</h3>
-                            <p>Visualización de datos dinámicos usando Python y librerías modernas.</p>
+                            <h3>Gestor Seguro de Información Sensible (CLI)</h3>
+
+                            <p>
+                                Aplicación de consola desarrollada en Python con arquitectura MVC para el
+                                almacenamiento y protección de información sensible. Implementa autenticación
+                                segura, derivación de claves criptográficas y cifrado de datos persistidos en SQLite,
+                                junto con auditoría mediante logs de seguridad.
+                            </p>
+
                             <div class="tags">
                                 <span>Python</span>
-                                <span>JavaScript</span>
-                                <span>Data</span>
+                                <span>SQLite</span>
+                                <span>Cryptography</span>
+                                <span>Security</span>
+                                <span>MVC</span>
                             </div>
-                            <div class="project-links">
-                                <a href="#" class="link-btn"><i data-lucide="github"></i> Code</a>
-                                <a href="#" class="link-btn"><i data-lucide="external-link"></i> Demo</a>
-                            </div>
-                        </div>
-                    </div> -->
 
-                    <!-- Proyecto 3 -->
-                    <!-- <div class="project-card glass" data-aos="fade-up" data-aos-delay="200">
-                        <div class="project-img">
-                            <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=800&q=80"
-                                alt="Proyecto 3">
-                        </div>
-                        <div class="project-info">
-                            <h3>E-commerce Minimalista</h3>
-                            <p>Tienda virtual con integración de base de datos SQLite3.</p>
-                            <div class="tags">
-                                <span>Django</span>
-                                <span>SQLite3</span>
-                                <span>HTML5</span>
-                            </div>
                             <div class="project-links">
-                                <a href="#" class="link-btn"><i data-lucide="github"></i> Code</a>
-                                <a href="#" class="link-btn"><i data-lucide="external-link"></i> Demo</a>
+                                <a href="https://github.com/LeoDev2p/GSIS-CLI" class="link-btn" target="_blank" rel="noopener noreferrer">
+                                    <i data-lucide="github"></i> Code
+                                </a>
+
+                                <!-- luego grabas demo puedes activar -->
+                                <!-- <a href="#" class="link-btn">
+                                    <i data-lucide="external-link"></i> Demo
+                                </a> -->
                             </div>
                         </div>
-                    </div> -->
+
+                    </div>
+
                 </div>
             </div>
         </section>
